# Accelerometer_app

./: .gitignore  CMakeLists.txt  README.md  config.txt
node_a/: CMakeLists.txt  main.cpp
node_b/: CMakeLists.txt  main.cpp
proto/: accelerometer.proto
server/: CMakeLists.txt  main.cpp
